# rust-audio-recording-and-playback

./: Cargo.toml  README.md
src/: audio.rs  audio_clip.rs  main.rs
