[package]
name = "rust_looper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.4"
color-eyre = "0.5.11"
dasp = {version = "0.11.0", features = ["signal", "interpolate", "interpolate-linear"]}
chrono = "0.4.19"
ctrlc = "3.2.1"